Filter emission lines from the list of selectable items